--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ body {
     background-color: #272a2f;
     color: #fff;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    user-select: none;
 }
 
 .container {
-    height: 100%;
+    height: 100vh;
     width: 550px;
     padding: 20px;
     background-color: #1c1f24;
@@ -29,6 +30,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 40px;
 }
 
 .count__img {
