--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 img {
     max-width: 100%;
+    touch-action: manipulation;
+    -ms-touch-action: manipulation;
 }
 
 body {
@@ -17,6 +19,52 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     user-select: none;
 }
+
+.sections {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+.section {
+    background-color: #272a2f;
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+
+.section__title {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.section__info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section__img {
+    max-width: 25px;
+    margin-right: 5px;
+}
+
+.section__text {
+    font-weight: 600;
+}
+
+.section__text:nth-child(1) {
+    margin-top: 5px;
+}
+
+.count {}
+
+.count__img {}
+
+.count__txt {}
+
+.button {}
+
+.button__img {}
 
 .container {
     height: 100vh;
@@ -53,3 +101,37 @@ body {
     border-radius: 50%;
     overflow: hidden;
 }
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.footer__energy {
+    display: flex;
+    align-items: center;
+}
+
+.energy__img {
+    max-width: 50px;
+    margin-right: 10px;
+}
+
+.energy__text {}
+
+.footer__upgrade {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.upgrade__img {
+    max-width: 50px;
+    margin-right: 10px;
+
+}
+
+.upgrade__button {}
